# SlicerGitSVNArchive

./: CMakeLists.txt  SuperBuild.cmake
Applications/SlicerApp/: CMakeLists.txt
Base/CLI/: CMakeLists.txt
Base/Logic/: CMakeLists.txt
Base/Python/: CMakeLists.txt
Base/QTApp/: CMakeLists.txt
Base/QTCLI/: CMakeLists.txt
Base/QTCore/: CMakeLists.txt  qSlicerCoreApplication.cxx
Base/QTGUI/: CMakeLists.txt
CMake/: CTestCustom.cmake.in  SlicerBlockInstallCMakeProjects.cmake  SlicerBlockInstallExternalPythonModules.cmake  SlicerCPack.cmake  SlicerCPackBundleFixup.cmake.in  SlicerDirectories.cmake  SlicerGenerateSlicerConfig.cmake  SlicerInstallConfig.cmake.in  SlicerMacroBuildApplication.cmake  SlicerMacroBuildBaseQtLibrary.cmake  SlicerMacroBuildModuleLogic.cmake  SlicerMacroBuildScriptedModule.cmake  SlicerMacroPythonWrapModuleVTKLibrary.cmake  UseSlicer.cmake.in  vtkMacroKitPythonWrap.cmake  vtkSlicerConfigure.h.in
CMake/LastConfigureStep/: CMakeLists.txt
Docs/: index.rst
Docs/developer_guide/: building_slicer.md
Libs/: CMakeLists.txt
Libs/ITKFactoryRegistration/: CMakeLists.txt
Libs/MRML/CLI/: CMakeLists.txt
Libs/MRML/Core/: CMakeLists.txt
Libs/MRML/DisplayableManager/: CMakeLists.txt
Libs/MRML/IDImageIO/: CMakeLists.txt
Libs/MRML/Logic/: CMakeLists.txt
Libs/MRML/Widgets/: CMakeLists.txt
Libs/vtkITK/: CMakeLists.txt
Libs/vtkSegmentationCore/: CMakeLists.txt
Libs/vtkTeem/: CMakeLists.txt
Modules/: CMakeLists.txt
Modules/CLI/ACPCTransform/: CMakeLists.txt
Modules/CLI/AddScalarVolumes/: CMakeLists.txt
Modules/CLI/ExtractSkeleton/: CMakeLists.txt
Modules/CLI/ModelMaker/: CMakeLists.txt
Modules/Core/: CMakeLists.txt
Modules/Loadable/Annotations/: CMakeLists.txt
Modules/Loadable/Annotations/Logic/: CMakeLists.txt  vtkSlicerAnnotationModuleLogic.h
Modules/Loadable/Annotations/MRML/: CMakeLists.txt
Modules/Loadable/Annotations/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Annotations/Widgets/: CMakeLists.txt
Modules/Loadable/Cameras/: CMakeLists.txt
Modules/Loadable/Cameras/Logic/: CMakeLists.txt
Modules/Loadable/Colors/: CMakeLists.txt
Modules/Loadable/Colors/Logic/: CMakeLists.txt
Modules/Loadable/Colors/VTKWidgets/: CMakeLists.txt
Modules/Loadable/Data/: CMakeLists.txt
Modules/Loadable/Data/Logic/: CMakeLists.txt
Modules/Loadable/DoubleArrays/: CMakeLists.txt
Modules/Loadable/DoubleArrays/Logic/: CMakeLists.txt
Modules/Loadable/Markups/: CMakeLists.txt  qSlicerMarkupsModuleWidget.cxx  qSlicerMarkupsModuleWidget.h
Modules/Loadable/Markups/Logic/: CMakeLists.txt  vtkSlicerMarkupsLogic.cxx
Modules/Loadable/Markups/MRML/: CMakeLists.txt  vtkMRMLMarkupsBezierSurfaceNode.cxx  vtkMRMLMarkupsBezierSurfaceNode.h  vtkMRMLMarkupsFiducialStorageNode.cxx
Modules/Loadable/Markups/MRMLDM/: CMakeLists.txt  vtkMRMLMarkupsDisplayableManager.cxx
Modules/Loadable/Markups/SubjectHierarchyPlugins/: CMakeLists.txt  qSlicerSubjectHierarchyMarkupsPlugin.cxx
Modules/Loadable/Markups/VTKWidgets/: CMakeLists.txt  vtkSlicerBezierSurfaceRepresentation2D.cxx  vtkSlicerBezierSurfaceRepresentation2D.h  vtkSlicerBezierSurfaceRepresentation3D.cxx  vtkSlicerBezierSurfaceRepresentation3D.h  vtkSlicerBezierSurfaceWidget.cxx  vtkSlicerBezierSurfaceWidget.h
Modules/Loadable/Markups/Widgets/: CMakeLists.txt
Modules/Loadable/Models/: CMakeLists.txt
Modules/Loadable/Models/Logic/: CMakeLists.txt
Modules/Loadable/Models/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Models/Widgets/: CMakeLists.txt
Modules/Loadable/Plots/: CMakeLists.txt
Modules/Loadable/Plots/Logic/: CMakeLists.txt
Modules/Loadable/Plots/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Plots/Widgets/: CMakeLists.txt
Modules/Loadable/Reformat/: CMakeLists.txt
Modules/Loadable/Reformat/Logic/: CMakeLists.txt
Modules/Loadable/SceneViews/: CMakeLists.txt
Modules/Loadable/SceneViews/Logic/: CMakeLists.txt  vtkSlicerSceneViewsModuleLogic.h
Modules/Loadable/SceneViews/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Segmentations/: CMakeLists.txt
Modules/Loadable/Segmentations/EditorEffects/: CMakeLists.txt
Modules/Loadable/Segmentations/Logic/: CMakeLists.txt
Modules/Loadable/Segmentations/MRML/: CMakeLists.txt
Modules/Loadable/Segmentations/MRMLDM/: CMakeLists.txt
Modules/Loadable/Segmentations/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Segmentations/Widgets/: CMakeLists.txt
Modules/Loadable/SlicerWelcome/: CMakeLists.txt
Modules/Loadable/SubjectHierarchy/: CMakeLists.txt
Modules/Loadable/SubjectHierarchy/Logic/: CMakeLists.txt
Modules/Loadable/SubjectHierarchy/Widgets/: CMakeLists.txt
Modules/Loadable/Tables/: CMakeLists.txt
Modules/Loadable/Tables/Logic/: CMakeLists.txt
Modules/Loadable/Tables/SubjectHierarchyPlugins/: CMakeLists.txt
Modules/Loadable/Tables/Widgets/: CMakeLists.txt
Modules/Loadable/Terminologies/: CMakeLists.txt
Modules/Loadable/Terminologies/Logic/: CMakeLists.txt
Modules/Loadable/Terminologies/Widgets/: CMakeLists.txt
Modules/Loadable/Transforms/: CMakeLists.txt
Modules/Loadable/Transforms/Logic/: CMakeLists.txt
Modules/Loadable/Units/: CMakeLists.txt
Modules/Loadable/ViewControllers/: CMakeLists.txt
Modules/Loadable/Volumes/: CMakeLists.txt
Modules/Scripted/DICOMLib/: CMakeLists.txt
Modules/Scripted/DICOMLib/Logic/: CMakeLists.txt
Modules/Scripted/DICOMLib/Widgets/: CMakeLists.txt
Modules/Scripted/Editor/: CMakeLists.txt
Modules/Scripted/EditorLib/: CMakeLists.txt
Modules/Scripted/Endoscopy/: CMakeLists.txt
Modules/Scripted/LabelStatistics/: CMakeLists.txt
Modules/Scripted/PerformanceTests/: CMakeLists.txt
Modules/Scripted/SampleData/: CMakeLists.txt
Modules/Scripted/ScreenCapture/: CMakeLists.txt
SuperBuild/: External_JsonCpp.cmake  External_ParameterSerializer.cmake  External_SlicerExecutionModel.cmake  External_python.cmake
Utilities/Scripts/: CMakeLists.txt
Utilities/Scripts/SlicerWizard/: CMakeLists.txt  ExtensionWizard.py
Utilities/Templates/: CMakeLists.txt
(+15 files in other folders)
